# lish-moa

./: .gitignore  Makefile  README.md  SETTINGS.json  directory_structure.txt  docker-compose.yaml  encode.py  entry_points.md  pyproject.toml  requirements.txt
src/: main.py  metrics.py  preprocess.py
src/experiment/: experiment.py
src/models/: base.py  blending.py  boosted_tree.py  boosting_tree.py  loss.py  optimizer.py  svm.py  tabnet.py  tabular_nn.py
src/models/pytorch_tabnet/: abstract_model.py  multitask.py  tab_model.py  tab_network.py
src/utils/: cache.py  environment.py  misc.py  splitter.py  transformers.py
test/unit_test/: test_cache.py
working/: nn-svm-tabnet-xgb-with-pca-cnn-stacking-without-pp.ipynb
